# CF_Faast_Foundations

./: .pre-commit-config.yaml  README.md
.github/workflows/: ci_faast_pipeline.yml
assignments/: pyproject.toml  teste.ipynb  week2.py
assignments/life_expectancy/: cleaning.py  main.py  region.py  strategy.py
assignments/life_expectancy/tests/: conftest.py  test_cleaning.py  test_load.py  test_main.py  test_pyproject.py  test_region.py  test_save_data.py
assignments/life_expectancy/tests/fixtures/: test_dataset.tsv
